[gd_scene load_steps=41 format=3 uid="uid://bx4mnycuab46x"]

[ext_resource type="Texture2D" uid="uid://c55hb7752s1vq" path="res://Sprites/Knight/s_knight_idle_strip3.png" id="1_1g64c"]
[ext_resource type="Script" path="res://src/knight.gd" id="1_56lbm"]
[ext_resource type="Texture2D" uid="uid://bgw4u5rnjxl1o" path="res://Sprites/Knight/s_knight_attack_strip12.png" id="1_v7riy"]
[ext_resource type="Texture2D" uid="uid://bknwpehjv3ra1" path="res://Sprites/Knight/s_knight_walk_strip4.png" id="2_al3qw"]
[ext_resource type="Texture2D" uid="uid://khtndrtv7380" path="res://Sprites/Knight/s_knight_die_strip6.png" id="2_d6ub0"]
[ext_resource type="Texture2D" uid="uid://bf3o68564byk0" path="res://Sprites/Knight/s_knight_hitstun.png" id="5_to27p"]
[ext_resource type="Texture2D" uid="uid://c6uyie00uh00e" path="res://Sprites/UI/s_enemy_bar.png" id="7_or2yu"]
[ext_resource type="Texture2D" uid="uid://c2h4j48ax4cbf" path="res://Sprites/UI/s_enemy_bar_progress.png" id="8_2n7il"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1w6ag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mewhq"]
atlas = ExtResource("1_v7riy")
region = Rect2(0, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp5tr"]
atlas = ExtResource("1_v7riy")
region = Rect2(81, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ayke"]
atlas = ExtResource("1_v7riy")
region = Rect2(162, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_45033"]
atlas = ExtResource("1_v7riy")
region = Rect2(243, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_051f2"]
atlas = ExtResource("1_v7riy")
region = Rect2(324, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoiot"]
atlas = ExtResource("1_v7riy")
region = Rect2(405, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfb51"]
atlas = ExtResource("1_v7riy")
region = Rect2(486, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iti2v"]
atlas = ExtResource("1_v7riy")
region = Rect2(567, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eqgy"]
atlas = ExtResource("1_v7riy")
region = Rect2(648, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5nh3"]
atlas = ExtResource("1_v7riy")
region = Rect2(729, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxkkc"]
atlas = ExtResource("1_v7riy")
region = Rect2(810, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lreme"]
atlas = ExtResource("1_v7riy")
region = Rect2(891, 0, 55, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3idox"]
atlas = ExtResource("2_d6ub0")
region = Rect2(0, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hvrs"]
atlas = ExtResource("2_d6ub0")
region = Rect2(78, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_akgid"]
atlas = ExtResource("2_d6ub0")
region = Rect2(156, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f1gn"]
atlas = ExtResource("2_d6ub0")
region = Rect2(234, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2es02"]
atlas = ExtResource("2_d6ub0")
region = Rect2(312, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssoev"]
atlas = ExtResource("2_d6ub0")
region = Rect2(390, 0, 60, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrnuk"]
atlas = ExtResource("1_1g64c")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx15f"]
atlas = ExtResource("1_1g64c")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w26mw"]
atlas = ExtResource("1_1g64c")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlfaa"]
atlas = ExtResource("5_to27p")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvp0f"]
atlas = ExtResource("2_al3qw")
region = Rect2(0, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0nxl"]
atlas = ExtResource("2_al3qw")
region = Rect2(40, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8pfg"]
atlas = ExtResource("2_al3qw")
region = Rect2(80, 0, 40, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoni7"]
atlas = ExtResource("2_al3qw")
region = Rect2(120, 0, 40, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_swsqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mewhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ayke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45033")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_051f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoiot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfb51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iti2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5nh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxkkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lreme")
}],
"loop": false,
"name": &"attak",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3idox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hvrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akgid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f1gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2es02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssoev")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrnuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx15f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w26mw")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfaa")
}],
"loop": false,
"name": &"stunhit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvp0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0nxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8pfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoni7")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g4li8"]
radius = 106.019

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sldar"]
size = Vector2(7, 1.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nayhm"]
size = Vector2(26, 8)

[sub_resource type="GDScript" id="GDScript_xib8k"]
script/source = "extends TextureProgressBar

# полоска жизни противника
func _process(delta):
	self.value = $\"..\".current_health
"

[node name="Knight" type="CharacterBody2D"]
script = ExtResource("1_56lbm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1w6ag")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -7)
scale = Vector2(0.839474, 0.916667)
sprite_frames = SubResource("SpriteFrames_swsqd")
animation = &"stunhit"
autoplay = "idle"

[node name="Agressive_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Agressive_area"]
shape = SubResource("CircleShape2D_g4li8")

[node name="Death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_sldar")

[node name="Deal_damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deal_damage"]
shape = SubResource("RectangleShape2D_nayhm")

[node name="health_bar" type="TextureProgressBar" parent="."]
offset_left = -13.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = -16.0
value = 100.0
texture_over = ExtResource("7_or2yu")
texture_progress = ExtResource("8_2n7il")
script = SubResource("GDScript_xib8k")

[connection signal="body_entered" from="Agressive_area" to="." method="_on_agressive_area_body_entered"]
[connection signal="body_exited" from="Agressive_area" to="." method="_on_agressive_area_body_exited"]
[connection signal="body_entered" from="Death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="Deal_damage" to="." method="_on_deal_damage_body_entered"]
[connection signal="body_exited" from="Deal_damage" to="." method="_on_deal_damage_body_exited"]
